reusable-components-completed

--- a/src/ui/atoms/heading/heading.css
+++ b/src/ui/atoms/heading/heading.css
@@ -1,7 +1,18 @@
 .heading {
-  padding: 12px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
+  font-size: 5rem;
+  font-weight: 800;
+  color: #05000a;
+  padding: 8px;
   margin: 10px;
-  font-size: 28px;
-  font-weight: bold;
+ 
 }
 
+.example-heading {
+
+  background: #034f84 ;
+  color: transparent;
+  -webkit-background-clip:text;
+  background-clip: text;
+
+}
