--- a/src/ui/atoms/formlabel/formlabel.css
+++ b/src/ui/atoms/formlabel/formlabel.css
@@ -1,8 +1,15 @@
 .formlabel {
-  font-size: 20px;
-  font-weight: 500;
-  display: block;
-  margin-bottom: 6px;
-  cursor: pointer;
+  font-size: 18px;
+  font-weight: 600;
+  display: inline-block;
+  margin: 8px !important;
+  color: #333;
+  letter-spacing: 0.5px;
+  font-family: 'Times New Roman', Times, serif !important;
 }
 
+.form-label-required::after {
+  content: "*" !important;
+  color: red !important;
+  margin-left: 4px !important;
+}
