--- a/src/ui/atoms/subheading/subheading.css
+++ b/src/ui/atoms/subheading/subheading.css
@@ -1,7 +1,13 @@
 .subheading {
-    padding: 8px;
-    margin: 20px;
-    font-size: 24px;
-    font-weight: semi-bold;
+    margin: 10px !important;
+    padding: 8px !important ;
+    font-weight: lighter;
+    font-family:  'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
+    color: #4d4d4d;
     
 }
+
+
+ 
+
+ 
