--- a/src/ui/atoms/customstepper/customstepper.css
+++ b/src/ui/atoms/customstepper/customstepper.css
@@ -1,9 +1,6 @@
 .stepper{
     width: 50% !important;
     margin: 20px !important;
-}
-.content{
-    display: flex !important;
-    align-items: center !important;
-    justify-content: center !important;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
+    font-weight: 800;
 }
