--- a/src/ui/atoms/input/input.css
+++ b/src/ui/atoms/input/input.css
@@ -1,6 +1,6 @@
 .input {
   max-width: 300px !important;
-  font-family: Verdana, Geneva, Tahoma, sans-serif !important;
+  font-family:  'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
   margin: 10px !important;
   background-color: #f7f7f7 !important; 
   border-radius: 10px !important;
