--- a/src/ui/atoms/heading/heading.css
+++ b/src/ui/atoms/heading/heading.css
@@ -10,7 +10,7 @@
 
 .example-heading {
 
-  background: #d56062 ;
+  background: #3e92cc;
   color: transparent;
   -webkit-background-clip:text;
   background-clip: text;
