--- a/src/ui/atoms/formlabel/formlabel.css
+++ b/src/ui/atoms/formlabel/formlabel.css
@@ -5,7 +5,7 @@
   margin: 8px !important;
   color: #333;
   letter-spacing: 0.5px;
-  font-family: 'Times New Roman', Times, serif !important;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
 }
 
 .form-label-required::after {
