--- a/src/ui/atoms/myModal/myModal.css
+++ b/src/ui/atoms/myModal/myModal.css
@@ -1,7 +1,7 @@
 .modal-header {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif !important;
+    font-family: var(--font-primary) !important;
   
 }
 .modal-body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif !important;
+    font-family: var(--font-secondary) !important;
 }
