--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,21 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root {
+  --font-primary: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  --font-secondary: Verdana, Geneva, Tahoma, sans-serif;
+  --font-tertiary: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+   --color-primary: #3e92cc;
+  --color-secondary: #d8315b;
+  
+  
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body, h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-primary) !important;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a, ul, ol, li, blockquote, pre, code, button, input, textarea, select, span{
+  font-family: var(--font-secondary) !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+p {
+  font-family: var(--font-tertiary) !important;
 }
